<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="go_back">Назад</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Обратиться в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="go_forward">Вперёд</string>
    <string name="android_course_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="contact_support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="contact_support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">ledrabbit@yandex.ru</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="refresh">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="check_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="start_time_progress">00:00</string>
    <string name="btn_back_description">Кнопка назад</string>
    <string name="album_cover_description">Обложка альбома</string>
    <string name="add_to_playlist_btn_description">Кнопка добавления трека в плейлист</string>
    <string name="play_btn_description">Кнопка плей</string>
    <string name="btn_favs_description">Кнопка добавления в избранное</string>
    <string name="btn_clear_search_description">Кнопка очищения поля ввода</string>
    <string name="placeholder_error_description">Изображение ошибки</string>
    <string name="no_applications_found">Подходящего приложения не найдено на Вашем устройстве</string>
    <string name="no_preview_error">Для данного трека нет превью</string>
    <string name="player_not_ready">Плеер еще не готов, попробуйте позже.</string>
    <string name="error_loading_preview">Не удалось загрузить ознакомительный отрывок</string>
    <string name="error_empty_library">Ваша медиатека пуста</string>
    <string name="error_no_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_header">Новый плейлист</string>
    <string name="hint_title">Название*</string>
    <string name="hint_description">Описание</string>
    <string name="label_create">Создать</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="finish_creating_dialog_title">Завершить создание плейлиста?</string>
    <string name="finish_creating_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="finish_creating_dialog_btn_positive">Завершить</string>
    <string name="finish_creating_dialog_btn_negative">Отмена</string>
    <string name="playlist_cover_content_desc">Изображение обложки плейлиста</string>
    <string name="add_to_playlist_header">Добавить в плейлист</string>
    <string name="track_already_present">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added_in_playlist">Добавлено в плейлист %1$s</string>
    <string name="total_minutes">%1$s минут</string>
    <string name="delete_track_dialog_title">Хотите удалить трек?</string>
    <string name="delete_track_dialig_btn_positive">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="dialog_btn_positive">Да</string>
    <string name="dialog_btn_negative">Нет</string>
    <string name="title_delete_playlist_dialog">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="playlist_updated">Плейлист %1$s сохранен</string>
    <string name="empty_playlist_nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="placeholder_content_desc">Нет обложки</string>
    <string name="btn_share_content_desc">Кнопка, чтобы поделиться плейлистом</string>
    <string name="btn_more_content_desc">Кнопка дополнительного меню</string>
    <string name="playlist">Плейлист \"%1$s\"</string>
    <string name="empty_playlist">В этом плейлисте еще нет треков</string>
    <string name="service_notification">%1$s - %2$s</string>
    <string name="no_notification_permission">Отсутствует разрешение на показ уведомлений</string>
    <string name="player_notification_channel_name">Уведомление плеера</string>
</resources>