<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="21dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/btn_back"
            style="@style/ArrowBackStyle" />

        <TextView
            style="@style/HeaderStyle"
            android:layout_marginStart="28dp"
            android:text="@string/settings" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextViewOptionsStyle"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:checked="false" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bth_share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextViewOptionsStyle"
            android:text="@string/share_app" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_gravity="end|center"
            android:contentDescription="@string/share_app"
            android:src="@drawable/share"
            app:tint="?attr/colorSecondary" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bth_contact_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextViewOptionsStyle"
            android:text="@string/contact_support" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_gravity="end|center"
            android:contentDescription="@string/contact_support"
            android:src="@drawable/support"
            app:tint="?attr/colorSecondary" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextViewOptionsStyle"
            android:text="@string/user_agreement" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_gravity="end|center"
            android:contentDescription="@string/go_forward"
            android:src="@drawable/arrow_forward"
            app:tint="?attr/colorSecondary" />

    </FrameLayout>


</LinearLayout>