<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/root_layout_padding">

        <ImageView
            android:id="@+id/arrow_back"
            style="@style/arrow_back_style"
            android:contentDescription="@string/btn_back_description"
            app:layout_constraintBottom_toBottomOf="@id/tv_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_header" />

        <TextView
            android:id="@+id/tv_header"
            style="@style/header_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16dp"
            android:text="@string/new_playlist_header"
            app:layout_constraintBottom_toTopOf="@+id/iv_playlist_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/arrow_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_playlist_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin8dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/playlist_cover_stroke"
            android:contentDescription="@string/playlist_cover_content_desc"
            android:scaleType="center"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintDimensionRatio="w, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/text_input_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin32dp"
            android:hint="@string/hint_title"
            android:theme="@style/text_input_layout_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_playlist_cover">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playlist_title"
                style="@style/regular_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textShortMessage"
                android:maxLines="1"
                android:padding="16dp"
                android:textColorHint="@color/regular_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/text_input_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            android:hint="@string/hint_description"
            android:theme="@style/text_input_layout_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playlist_desc"
                style="@style/regular_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:textColorHint="@color/regular_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_create"
            app:layout_constraintTop_toBottomOf="@id/til_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin16dp"

            android:background="@drawable/create_playlist_btn_background"
            android:enabled="false"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/label_create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

