<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.activity.PlayerActivity">

    <ImageView
        android:id="@+id/arrow_back"
        style="@style/ArrowBackStyle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/iv_album_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        android:contentDescription="@string/btn_back_description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <ImageView
        android:id="@+id/iv_album_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/album_placeholder_big"
        app:layout_constraintBottom_toTopOf="@+id/tv_song_title"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back"
        android:contentDescription="@string/album_cover_description" />

    <TextView
        android:id="@+id/tv_song_title"
        style="@style/HeaderStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_artist"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_album_cover"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/tv_artist"
        style="@style/RegularTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_song_title"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/btn_add_to_playlist"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@drawable/small_round_buttons"
        android:src="@drawable/ic_add_to_playlist"
        app:layout_constraintBottom_toBottomOf="@id/btn_play"
        app:layout_constraintEnd_toStartOf="@+id/btn_play"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/btn_play"
        android:contentDescription="@string/add_to_playlist_btn_description" />

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/play_round_button"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toTopOf="@+id/tv_play_progress"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_to_favs"
        app:layout_constraintStart_toEndOf="@id/btn_add_to_playlist"
        app:layout_constraintTop_toBottomOf="@+id/tv_artist"
        android:contentDescription="@string/play_btn_description" />

    <ImageButton
        android:id="@+id/btn_add_to_favs"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@drawable/small_round_buttons"
        android:src="@drawable/ic_add_to_favs"
        app:layout_constraintBottom_toBottomOf="@id/btn_play"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/btn_play"
        app:layout_constraintTop_toTopOf="@id/btn_play"
        android:contentDescription="@string/btn_favs_description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_info_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_info_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tv_duration_label" />

    <TextView
        android:id="@+id/tv_play_progress"
        style="@style/RegularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin12dp"
        android:text="@string/start_time_progress"
        app:layout_constraintBottom_toTopOf="@+id/tv_duration_label"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />

    <TextView
        android:id="@+id/tv_duration_label"
        style="@style/LabelsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24dp"
        android:text="@string/duration_label"
        app:layout_constraintBottom_toTopOf="@+id/tv_album_label"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_play_progress" />


    <TextView
        android:id="@+id/tv_album_label"
        style="@style/LabelsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:text="@string/album_label"
        app:layout_constraintBottom_toTopOf="@+id/tv_year_label"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration_label" />


    <TextView
        android:id="@+id/tv_year_label"
        style="@style/LabelsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:text="@string/year_label"
        app:layout_constraintBottom_toTopOf="@+id/tv_genre_label"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_album_label" />


    <TextView
        android:id="@+id/tv_genre_label"
        style="@style/LabelsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:text="@string/genre_label"
        app:layout_constraintBottom_toTopOf="@id/tv_country_label"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_year_label" />


    <TextView
        android:id="@+id/tv_country_label"
        style="@style/LabelsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin24dp"
        android:text="@string/country_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_genre_label" />

    <TextView
        android:id="@+id/tv_duration"
        style="@style/PlayerSongInfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_duration_label"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_play_progress"
        tools:text="5:35" />

    <TextView
        android:id="@+id/tv_album"
        style="@style/PlayerSongInfoTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_album_label"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/labelsBarrier"
        app:layout_constraintTop_toBottomOf="@id/tv_duration"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/tv_year"
        style="@style/PlayerSongInfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_year_label"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_album"
        tools:text="1965" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/PlayerSongInfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_genre_label"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_year"
        tools:text="Rock" />

    <TextView
        android:id="@+id/tv_country"
        style="@style/PlayerSongInfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_country_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        tools:text="Великобритания" />


</androidx.constraintlayout.widget.ConstraintLayout>