<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="13dp"
    android:paddingTop="@dimen/root_layout_padding"
    android:paddingEnd="@dimen/root_layout_padding"
    tools:context=".search.ui.fragment.SearchFragment">

    <TextView
        style="@style/header_style"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="@dimen/margin16dp"
        android:text="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_bottom_margin_search_history"
        android:paddingStart="3dp">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corners"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/search_field_text_size" />

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="@dimen/btn_search_size"
            android:layout_height="@dimen/btn_search_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="13dp"
            android:src="@drawable/ic_search"
            app:tint="@color/search_ic_tint"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/btn_clear"
            android:layout_width="@dimen/btn_clear_size"
            android:layout_height="@dimen/btn_clear_size"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/btn_clear_search_description"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:tint="@color/search_ic_tint"
            tools:visibility="visible" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="5"
            tools:listitem="@layout/track_view"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/placeholder_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="88dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholder_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin16dp"
                android:contentDescription="@string/placeholder_error_description"
                tools:src="@drawable/ic_no_internet" />

            <TextView
                android:id="@+id/placeholder_message"
                style="@style/medium_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/views_bottom_margin_search_history"
                tools:text="Проверьте соединение" />

            <Button
                android:id="@+id/btn_refresh"
                style="@style/basic_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/refresh" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/view_group_history_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/medium_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin20dp"
                    android:text="@string/search_history_title"
                    android:textAlignment="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/views_bottom_margin_search_history"
                    android:nestedScrollingEnabled="false" />

                <Button
                    android:id="@+id/btn_clear_history"
                    style="@style/basic_button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/clear_history" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</LinearLayout>
